silly visibility issue

--- a/app/css/application.scss
+++ b/app/css/application.scss
@@ -313,7 +313,7 @@ a.navbar-brand {
 }
 
 .app_alert {
-//  display: none;
+  display: none;
   font-size: .8em;
   font-style: italic;
   border: 1px solid $mh_offblack;
